# elec3210-lab

./: .gitignore  LICENSE  README.md  a_star_dev.sh  docker-compose.yml  ekf_slam_dev.sh  icp_odom_dev.sh  readme.md  simulation_dev.sh  stop_dev.sh
a_star/: readme.md
a_star/grid_path_searcher/: CMakeLists.txt
a_star/grid_path_searcher/include/: Astar_searcher.h  node.h
a_star/grid_path_searcher/launch/: demo.launch
a_star/grid_path_searcher/launch/rviz_config/: demo.rviz
a_star/grid_path_searcher/src/: Astar_searcher.cpp  demo_node.cpp  random_complex_generator.cpp
a_star/rviz_plugins/src/: aerialmap_display.cpp  aerialmap_display.h  goal_tool.cpp  goal_tool.h  multi_probmap_display.cpp  multi_probmap_display.h  pose_tool.cpp  pose_tool.h  probmap_display.cpp  probmap_display.h
a_star/waypoint_generator/src/: waypoint_generator.cpp
dataset/: readme.md  src.pcd  tgt.pcd
docker/lab/: lab.dockerfile  supervisord.conf
ekf_slam/: CMakeLists.txt  package.xml  readme.md
ekf_slam/examples/: ekf_node.cpp
ekf_slam/include/: ekf_slam.h  extract_cylinder.h  utils.h  voxel.h
ekf_slam/launch/: default.rviz  ekf_slam.launch
ekf_slam/src/: ekf_slam.cpp
icp_odom/: CMakeLists.txt  package.xml  readme.md
icp_odom/cmake/: global_definition.cmake
icp_odom/configs/: odometry.yaml
icp_odom/examples/: odom_node.cpp  toy_example.cpp
icp_odom/include/: global_definition.h.in  icp.h  odometry.h  parameters.h  utils.h
icp_odom/launch/: default.rviz  icp.launch
icp_odom/src/: icp.cpp  odometry.cpp  parameters.cpp
simulation/: readme.md
simulation/launch/: gazebo_turtlebot3.launch
simulation/rviz/: rviz.rviz
simulation/urdf/: turtlebot3_waffle.urdf.xacro
simulation/world/: wall_cylinder.world
